--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 <title>form</title>
 </head>
 <body bgcolor="grey">
-  <a href="index.html"><i>back</i></a>
+  <a href="index.html"><i>back</i></a> <br>
 
 ENTER YOUR DETAILS:
 <br>
